--- a/Notes for the sequence algorithms round.ipynb
+++ b/Notes for the sequence algorithms round.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "{'A': 0, 'C': 1, 'G': 2, 'T': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"ACGT\".index(\"C\"))\n",
     "d={\"A\":0,\"C\":1,\"G\":2,\"T\":3}\n",
@@ -20,9 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 A\n",
+      "1 C\n",
+      "2 G\n",
+      "3 T\n",
+      "{'A': 0, 'C': 1, 'G': 2, 'T': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "d2={}\n",
     "for i,l in enumerate(\"ACGT\"):\n",
@@ -33,9 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 0, 'C': 1, 'G': 2, 'T': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "#dict([(\"A\",0),(\"C\",1)...])\n",
     "d3=dict( ((l,i) for i,l in enumerate(\"ACGT\")) )\n",
@@ -51,18 +80,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
    "source": [
     "print(4**3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digit C power 0\n",
+      "Digit A power 1\n",
+      "Digit G power 2\n",
+      "Digit A power 3\n",
+      "Digit C power 4\n",
+      "Digit T power 5\n",
+      "Digit G power 6\n",
+      "Digit C power 7\n",
+      "Digit A power 8\n"
+     ]
+    }
+   ],
    "source": [
     "for p,d in enumerate(\"ACGTCAGAC\"[::-1]):\n",
     "    print(\"Digit\",d,\"power\",p)"
@@ -70,9 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[{}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}]\n",
+      "[{'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}, {'k': 'v'}]\n",
+      "[{}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}]\n",
+      "[{'k': 'v'}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}]\n"
+     ]
+    }
+   ],
    "source": [
     "print([0]*22)\n",
     "\n",
@@ -96,16 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print([[0]*10 for _ in range(10)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +190,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 4, 'f': 4, 'j': 4, 'd': 2, 's': 4, 'k': 3, 'o': 1, 'g': 1, 'l': 3, 'a': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "counter={}\n",
     "for l in \"hfjdskohgfjlkdsahfjlsahfjlksa\":\n",
     "    counter[l]=counter.get(l,0)+1\n",
     "print(counter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
