updated lecture 6 with comments & fixed bugs induced during lecture

--- a/week-6-DNA-assembly.ipynb
+++ b/week-6-DNA-assembly.ipynb
@@ -5,25 +5,37 @@
    "metadata": {},
    "source": [
     "### Material sources\n",
-    "#### http://betatim.github.io/posts/genome-hackers/\n",
-    "\n",
+    "#### http://betatim.github.io/posts/genome-hackers/ \n",
+    "This gives you the idea how to solve DNA assembly problem. The site explains quite good in details just in case you didn't understand the lecture today. \n",
     "\n",
     "#### http://rosalind.info/problems/\n",
-    "#### https://www.pnas.org/content/98/17/9748"
+    "The lecture follows the problems in Rosalind where you can solve the DNA assembly. The lecture here will follow the tree of solving `Genome assembly with perfect coverage`. The idea is to solve the related problems ordered from easy to difficult level until you can assemble the DNA.\n",
+    "\n",
+    "#### https://www.pnas.org/content/98/17/9748\n",
+    "Paper describes Eulerian's path algorithm in assembling the DNA. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transcribing DNA into RNA"
+    "#### Transcribing DNA into RNA\n",
+    "##### (Source: http://rosalind.info/problems/rna/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -45,17 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "dna = 'AAAACCCGGT'\n",
-    "compl = 'ACCGGGTTTT'\n",
-    "sub_dict = {'A': 'T', 'G': 'C', 'T': 'A', 'C': 'G'}\n",
-    "\n",
     "def complementary_dna(dna):\n",
     "    return ''.join([sub_dict[nt] for nt in dna.upper()[::-1]])\n",
     "    \n",
+    "dna = 'AAAACCCGGT'\n",
+    "compl = 'ACCGGGTTTT'\n",
+    "sub_dict = {'A': 'T', 'G': 'C', 'T': 'A', 'C': 'G'}\n",
     "print(complementary_dna(dna) == compl)"
    ]
   },
@@ -63,39 +82,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Finding a Motif in DNA"
+    "#### Finding a Motif in DNA\n",
+    "##### (Source: http://rosalind.info/problems/subs/)\n",
+    "\n",
+    "Finding DNA substring using regular expression by default a 'non-overlapping search'. To use re to search/match text with overlapping enable, you need to create the pattern using `lookahead assertion` -- `(?=(text)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5\n",
+      "3 7\n",
+      "5 9\n",
+      "11 15\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
-    "s = 'GATATATATGCATATACTT'\n",
-    "t = 'ATAT'\n",
     "\n",
-    "def find_overlapping(s, t):\n",
+    "def find_motif(s, t):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
     "    result = re.finditer(r'(?=({}))'.format(t), s)\n",
     "    for i in result:\n",
     "        print(i.start(1), i.end(1))\n",
     "\n",
-    "find_overlapping(s, t)"
+    "        \n",
+    "s = 'GATATATATGCATATACTT'\n",
+    "t = 'ATAT'\n",
+    "\n",
+    "find_motif(s, t)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Overlap graph"
+    "#### Overlap graph\n",
+    "##### (Source: http://rosalind.info/problems/grph/)\n",
+    "\n",
+    "N.B. the original overlap_suffix function allows the overlapping to occure in the middle of sequence which is incorrect. The new one now works as it should be that overlapping occurs only on the prefix and suffix regions of the sequences."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Rosalind_0498', 'Rosalind_2391', 3], ['Rosalind_0498', 'Rosalind_0442', 3], ['Rosalind_2391', 'Rosalind_2323', 3]]\n"
+     ]
+    }
+   ],
    "source": [
     "def read_fasta(fasta_file):\n",
     "    seq_sid = {}\n",
@@ -120,30 +168,32 @@
     "    while i > max(overlap_len):\n",
     "        j = len(y)\n",
     "        while j > max(overlap_len):\n",
-    "            while x[i-l:] == y[j-l:j]:\n",
+    "            if x[i:] != y[:j]:\n",
     "                overlap_len.append(l)\n",
-    "                l += 1\n",
+    "            else:\n",
+    "                overlap_len.append(len(x[i:]))\n",
     "            j -= 1\n",
     "        i -= 1\n",
     "    return max(overlap_len)\n",
     "\n",
-    "def find_overlap(records, overlap):\n",
+    "def find_overlap(records, overlap_len):\n",
     "    overlap_pair = []\n",
     "    seqs = list(records.keys())\n",
     "    for i in range(len(seqs)):\n",
     "        for j in range(i+1, len(seqs)):\n",
-    "            mi = overlap_suffix(seqs[i], seqs[j], overlap)\n",
-    "            mj = overlap_suffix(seqs[j], seqs[i], overlap)\n",
-    "            if mi > mj and mi > overlap:\n",
+    "            mi = overlap_suffix(seqs[i], seqs[j], overlap_len) # seq[i] is seq X, seq[j] is seq Y\n",
+    "            mj = overlap_suffix(seqs[j], seqs[i], overlap_len) # seq[i] is seq Y, seq[j] is seq X\n",
+    "            # pick the max overlap length to determine seq XY order in assembling, whether it is XY or YX \n",
+    "            if mi > mj and mi > overlap_len: \n",
     "                overlap_pair.append([records[seqs[i]], records[seqs[j]], mi])\n",
-    "            elif mj > mi and mj > overlap:          \n",
+    "            elif mj > mi and mj > overlap_len:          \n",
     "                overlap_pair.append([records[seqs[j]], records[seqs[i]], mj])\n",
     "    return overlap_pair\n",
     "\n",
     "\n",
     "fasta_file = '>Rosalind_0498\\nAAATAAA\\n>Rosalind_2391\\nAAATTTT\\n>Rosalind_2323\\nTTTTCCC\\n>Rosalind_0442\\nAAATCCC\\n>Rosalind_5013\\nGGGTGGG\\n'\n",
-    "overlap_len = 1\n",
     "seq_sid, sid_seq = read_fasta(fasta_file)\n",
+    "overlap_len = 1\n",
     "overlap_pair = find_overlap(seq_sid, overlap_len)\n",
     "print(overlap_pair)"
    ]
@@ -152,16 +202,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Genome Assembly as Shortest Superstring"
+    "#### Genome Assembly as Shortest Superstring\n",
+    "##### (Source: http://rosalind.info/problems/long/)\n",
+    "Then we combine all the overlap pairs into the shortest superstring."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATTAGACCTGCCGGAATAC\n",
+      "True\n",
+      "[['Rosalind_56', 'Rosalind_58', 7], ['Rosalind_58', 'Rosalind_57', 7], ['Rosalind_57', 'Rosalind_59', 7], ['Rosalind_56', 'Rosalind_57', 4], ['Rosalind_58', 'Rosalind_59', 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "def shortest_superstring(overlap_pair, sid_seq):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
     "    overlap_pair.sort(key= lambda x: x[2], reverse=True)\n",
     "    overlap_string = ''\n",
     "    done_set = []  \n",
@@ -175,13 +239,14 @@
     "            done_set.append(item[1])\n",
     "    return overlap_string\n",
     "   \n",
-    "\n",
     "fasta_file = '>Rosalind_56\\nATTAGACCTG\\n>Rosalind_57\\nCCTGCCGGAA\\n>Rosalind_58\\nAGACCTGCCG\\n>Rosalind_59\\nGCCGGAATAC\\n'\n",
     "records = read_fasta(fasta_file)\n",
     "overlap_len = 1\n",
     "seq_sid, sid_seq = read_fasta(fasta_file)\n",
     "overlap_pair = find_overlap(seq_sid, overlap_len)\n",
     "sss = shortest_superstring(overlap_pair, sid_seq)\n",
+    "\n",
+    "print(sss)\n",
     "print(sss == 'ATTAGACCTGCCGGAATAC')\n",
     "print(overlap_pair)"
    ]
@@ -190,22 +255,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### K-mer composition"
+    "#### K-mer composition\n",
+    "##### (Source: http://rosalind.info/problems/kmer/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "[4, 1, 4, 3, 0, 1, 1, 5, 1, 3, 1, 2, 2, 1, 2, 0, 1, 1, 3, 1, 2, 1, 3, 1, 1, 1, 1, 2, 2, 5, 1, 3, 0, 2, 2, 1, 1, 1, 1, 3, 1, 0, 0, 1, 5, 5, 1, 5, 0, 2, 0, 2, 1, 2, 1, 1, 1, 2, 0, 1, 0, 0, 1, 1, 3, 2, 1, 0, 3, 2, 3, 0, 0, 2, 0, 8, 0, 0, 1, 0, 2, 1, 3, 0, 0, 0, 1, 4, 3, 2, 1, 1, 3, 1, 2, 1, 3, 1, 2, 1, 2, 1, 1, 1, 2, 3, 2, 1, 1, 0, 1, 1, 3, 2, 1, 2, 6, 2, 1, 1, 1, 2, 3, 3, 3, 2, 3, 0, 3, 2, 1, 1, 0, 0, 1, 4, 3, 0, 1, 5, 0, 2, 0, 1, 2, 1, 3, 0, 1, 2, 2, 1, 1, 0, 3, 0, 0, 4, 5, 0, 3, 0, 2, 1, 1, 3, 0, 3, 2, 2, 1, 1, 0, 2, 1, 0, 2, 2, 1, 2, 0, 2, 2, 5, 2, 2, 1, 1, 2, 1, 2, 2, 2, 2, 1, 1, 3, 4, 0, 2, 1, 1, 0, 1, 2, 2, 1, 1, 1, 5, 2, 0, 3, 2, 1, 1, 2, 2, 3, 0, 3, 0, 1, 3, 1, 2, 3, 0, 2, 1, 2, 2, 1, 2, 3, 0, 1, 2, 3, 1, 1, 3, 1, 0, 1, 1, 3, 0, 2, 1, 2, 2, 0, 2, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "import itertools\n",
     "\n",
     "def ngram2index(ngram):\n",
+    "    a = [''.join(item) for item in itertools.product('GACT', repeat=ngram)] \n",
+    "    # the order of given alphabets is important for itertools.product \n",
+    "    # if you want alphabetical order result, then given 'ACGT' should be in alphabetical order\n",
+    "    # or to make sure that you use the sort function\n",
+    "    a.sort()\n",
+    "    print(a == [''.join(item) for item in itertools.product('ACGT', repeat=ngram)])\n",
     "    return [''.join(item) for item in itertools.product('ACGT', repeat=ngram)]\n",
     "\n",
     "                                                        \n",
     "def kmer_composition(dna, k):\n",
+    "    \"\"\"\n",
+    "    This kmer composition function is the same as geneating the spectrum of DNA ngram\n",
+    "    \"\"\"\n",
     "    ngram = ngram2index(k)\n",
     "    kmer = {}\n",
     "    for i in range(len(dna) - k + 1):\n",
@@ -222,22 +306,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Constructing De Bruijn Graph\n"
+    "#### Constructing De Bruijn Graph\n",
+    "##### (Source: http://rosalind.info/problems/dbru/, http://www.langmead-lab.org/teaching-materials/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'GAT': {'ATG', 'ATC'}, 'CAT': {'ATG', 'ATC'}, 'ATG': {'TGA', 'TGC'}, 'TGA': {'GAT'}, 'TCA': {'CAT'}, 'ATC': {'TCA'}}\n"
+     ]
+    }
+   ],
    "source": [
     "def get_kmer(dna):\n",
+    "    \"\"\"\n",
+    "    from DNA reads, generate all the k-mer \n",
+    "    \"\"\"\n",
     "    k = len(dna) - 1\n",
     "    return [dna[i:i+k] for i in range(len(dna) - k + 1)]\n",
     "        \n",
     "def de_bruijn_graph(dna):\n",
+    "    \"\"\"\n",
+    "    generate de Bruijn graph using dictionary\n",
+    "    dict.keys(): node\n",
+    "    dict.values(): edges  \n",
+    "    \"\"\"\n",
     "    edges = {}\n",
-    "    all_kmer = set([kmer for item in dna for kmer in get_kmer(item) ])\n",
+    "    all_kmer = set([kmer for item in dna for kmer in get_kmer(item)]) # get all the kmers\n",
     "    for i in all_kmer:\n",
     "        for j in all_kmer:\n",
     "            if i[1:] == j[:len(j)-1]:\n",
@@ -255,33 +356,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Genome assembly with perfect coverage"
+    "#### Genome assembly with perfect coverage\n",
+    "##### (Source: http://rosalind.info/problems/pcov/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TTACAGA\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def cyclic_superstring(edges):\n",
     "    cyclic_string = ''\n",
     "    all_edges = list(edges.keys())\n",
     "    stack = []\n",
-    "    while set(stack) != set(all_edges):\n",
+    "    while set(stack) != set(all_edges): # make sure that we have visit all nodes\n",
     "        for k in edges.keys():\n",
-    "            if stack == []:\n",
+    "            if stack == []: # beginning of string, add both nodes \n",
     "                cyclic_string += k\n",
-    "                stack.append(k)\n",
+    "                stack.append(k) # keep tracking which node we have already visited\n",
     "                nodes = list(edges[k])\n",
     "                cyclic_string += nodes[0][-1]\n",
-    "                stack.append(nodes[0])\n",
+    "                stack.append(nodes[0]) # keep tracking which node we have already visited\n",
     "            elif k in stack:\n",
     "                nodes = list(edges[k])\n",
     "                if nodes[0] not in stack:\n",
     "                    cyclic_string += nodes[0][-1]\n",
-    "                    stack.append(nodes[0])\n",
-    "    return cyclic_string[len(all_edges[0])-1:]\n",
+    "                    stack.append(nodes[0]) # keep tracking which node we have already visited\n",
+    "    return cyclic_string[len(all_edges[0])-1:] # remove the beginning of string of k-1 mer\n",
     "\n",
     "\n",
     "dna = 'ATTAC\\nTACAG\\nGATTA\\nACAGA\\nCAGAT\\nTTACA\\nAGATT'\n",
@@ -290,7 +401,7 @@
     "cyclic_dna = cyclic_superstring(paths)\n",
     "print(cyclic_dna)\n",
     "answer = 'GATTACA'\n",
-    "print(answer)"
+    "print(answer == cyclic_dna)"
    ]
   },
   {
