add link for Python re module

--- a/week-6-DNA-assembly.ipynb
+++ b/week-6-DNA-assembly.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "source": [
     "#### Finding a Motif in DNA\n",
-    "##### (Source: http://rosalind.info/problems/subs/)\n",
+    "##### (Source: http://rosalind.info/problems/subs/, https://docs.python.org/3.6/library/re.html)\n",
     "\n",
     "Finding DNA substring using regular expression by default a 'non-overlapping search'. To use re to search/match text with overlapping enable, you need to create the pattern using `lookahead assertion` -- `(?=(text)`."
    ]
@@ -319,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'GAT': {'ATG', 'ATC'}, 'CAT': {'ATG', 'ATC'}, 'ATG': {'TGA', 'TGC'}, 'TGA': {'GAT'}, 'TCA': {'CAT'}, 'ATC': {'TCA'}}\n"
+      "{'TCA': {'CAT'}, 'ATC': {'TCA'}, 'GAT': {'ATG', 'ATC'}, 'TGA': {'GAT'}, 'ATG': {'TGC', 'TGA'}, 'CAT': {'ATG', 'ATC'}}\n"
      ]
     }
    ],
@@ -369,8 +369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TTACAGA\n",
-      "False\n"
+      "ACAGATT\n",
+      "False : might not be True when compared while using linear representation for cyclic DNA\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
     "cyclic_dna = cyclic_superstring(paths)\n",
     "print(cyclic_dna)\n",
     "answer = 'GATTACA'\n",
-    "print(answer == cyclic_dna)"
+    "print(answer == cyclic_dna, ': might not be True when compared while using linear representation for cyclic DNA')"
    ]
   },
   {
