update week-5 lecture to include the lecture on Wednesday

--- a/lectures/week-5-sequence-alignment.ipynb
+++ b/lectures/week-5-sequence-alignment.ipynb
@@ -540,6 +540,214 @@
     "output_handle.close()\n",
     "input_handle.close()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change file format (alternative)\n",
+    "\n",
+    "Instead of opening input file in read-mode and output file in write-mode, convert function in AlignIO can be called directly to change the alignment file type. \n",
+    "\n",
+    "\n",
+    "Arguments:\n",
+    "\n",
+    "- `in_file` - an input handle or filename\n",
+    "- `in_format` - input file format, lower case string\n",
+    "- `output` - an output handle or filename\n",
+    "- `out_file` - output file format, lower case string\n",
+    "- `alphabet` - optional alphabet to assume, default=None\n",
+    "\n",
+    "The formats allowed for conversion are listed in the link.\n",
+    "https://biopython.org/DIST/docs/api/Bio.AlignIO-module.html#convert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import AlignIO\n",
+    "\n",
+    "## original phylip format limits sequence id to be only 10 characters\n",
+    "AlignIO.convert(\"PF18225_seed.sth\", \"stockholm\", \"PF18225_seed_strict.phy\", \"phylip\")\n",
+    "\n",
+    "## relaxed phylip allows longer names to be written\n",
+    "AlignIO.convert(\"PF18225_seed.sth\", \"stockholm\", \"PF18225_seed_relaxed.phy\", \"phylip-relaxed\")\n",
+    "\n",
+    "## it returns the number of the alignments "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SummaryInfo\n",
+    "\n",
+    "\n",
+    "### dumb_consensus\n",
+    "\n",
+    "It goes through the sequence residue by residue and count the number of each type of residue (ie. A, G, T and C for DNA) in all sequences in the alignment. If the percentage of the most common residue type is greater then the specified threshold, that residue will be added to the consensus sequence, otherwise an ambiguous character will be added.\n",
+    "\n",
+    "Arguments: (taken from https://biopython.org/DIST/docs/api/Bio.Align.AlignInfo.SummaryInfo-class.html#dumb_consensus)\n",
+    "\n",
+    "- `threshold` - The threshold value that is required to decide whether to add a particular atom.\n",
+    "- `ambiguous` - The ambiguous character to be added when the threshold is not reached.\n",
+    "- `consensus_alpha` - The alphabet to return for the consensus sequence. If this is None, then we will try to guess the alphabet.\n",
+    "- `require_multiple` - If set as 1, this will require that more than 1 sequence be part of an alignment to put it in the consensus (ie. not just 1 sequence and gaps)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import AlignIO\n",
+    "\n",
+    "align = AlignIO.read(\"PF18225_full.fasta\", \"fasta\")\n",
+    "## specify the format of alignment file\n",
+    "\n",
+    "print(align)\n",
+    "\n",
+    "from Bio.Align import AlignInfo\n",
+    "from Bio.Align.AlignInfo import SummaryInfo\n",
+    "## load AlignInfo modules and SummaryInfo submodules\n",
+    "\n",
+    "summary = SummaryInfo(align)\n",
+    "## create summary object\n",
+    "\n",
+    "print('')\n",
+    "\n",
+    "dumb_7 = summary.dumb_consensus()\n",
+    "## create consensus sequence with the default threshold of 0.7\n",
+    "dumb_4 = summary.dumb_consensus(threshold=0.4)\n",
+    "## create consensus sequence with lower (specified) threshold of 0.4\n",
+    "\n",
+    "\n",
+    "## compare the results from difference threshold\n",
+    "print('default threshold = 0.7', str(dumb_7))\n",
+    "print('consensus threshold = 0.4', str(dumb_4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### gap_consensus\n",
+    "\n",
+    "The method is similar to dumb_consensus, but allows gaps on the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import AlignIO\n",
+    "\n",
+    "align = AlignIO.read(\"PF18225_full.fasta\", \"fasta\")\n",
+    "## specify the format of alignment file\n",
+    "\n",
+    "print(align)\n",
+    "\n",
+    "from Bio.Align import AlignInfo\n",
+    "from Bio.Align.AlignInfo import SummaryInfo\n",
+    "## load AlignInfo modules and SummaryInfo submodules\n",
+    "\n",
+    "summary = SummaryInfo(align)\n",
+    "## create summary object\n",
+    "\n",
+    "## create sumb consensus sequence\n",
+    "dumb_cons = summary.dumb_consensus()\n",
+    "print('dumb oncensus', str(dumb_cons))\n",
+    "\n",
+    "print('')\n",
+    "\n",
+    "## create gap consensus sequence\n",
+    "gap_cons = summary.gap_consensus()\n",
+    "print('gap oncensus', str(gap_cons))\n",
+    "\n",
+    "## compare the difference between dumb and gap consensus sequences\n",
+    "## when using the default threshold (0.7)\n",
+    "summary.gap_consensus() == summary.dumb_consensus()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Letter frequency \n",
+    "Another way to look at the alignment and consensus sequence is to look at the letter frequency, the count of each letter at certain position. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import AlignIO\n",
+    "\n",
+    "align = AlignIO.read(\"new_opuntia.aln\", \"clustal\")\n",
+    "## load our MSA alignment file\n",
+    "\n",
+    "print(align)\n",
+    "print('')\n",
+    "\n",
+    "from Bio.Align import AlignInfo\n",
+    "from Bio.Align.AlignInfo import SummaryInfo\n",
+    "\n",
+    "summary = SummaryInfo(align)\n",
+    "## create summary of the alignments\n",
+    "\n",
+    "## check frequency of nucleotide at position 7\n",
+    "print(summary._get_letter_freqs(residue_num=7, all_records=align, \n",
+    "                          letters=['A', 'C', 'G', 'T'], to_ignore=['N', '-']))\n",
+    "\n",
+    "print('')\n",
+    "## check frequency throughout the sequence length\n",
+    "## by going through each position at a time\n",
+    "for i in range(align.get_alignment_length()):\n",
+    "    freq_dict = summary._get_letter_freqs(residue_num=i, all_records=align, \n",
+    "                                    letters=['A', 'C', 'G', 'T'], to_ignore=['N', '-'])\n",
+    "    print(i, freq_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Position specific score matrices (PSSMs)\n",
+    "\n",
+    "PSSM is a count matrix. For each column in the alignment, it displays the sum of each character. The input sequence can be either the consensus sequence or any sequence in the alignment. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## consensus sequence\n",
+    "\n",
+    "consensus = summary.dumb_consensus()\n",
+    "\n",
+    "## using consensus sequence\n",
+    "print(summary.pos_specific_score_matrix(axis_seq=consensus, chars_to_ignore=['N', '-']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## first sequence in the alignment\n",
+    "print(summary.pos_specific_score_matrix(axis_seq=align[0]))#, chars_to_ignore=['N', '-']))"
+   ]
   }
  ],
  "metadata": {
@@ -551,14 +759,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
